--- a/package.json
+++ b/package.json
@@ -22,15 +22,10 @@
     "@material-ui/icons": "^1.1.0",
     "async": "^2.6.0",
     "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
     "classnames": "^2.2.6",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "electron": "^4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "^2.12.0",
@@ -59,13 +54,12 @@
     "progress-bar-webpack-plugin": "^1.10.0",
     "prop-types": "^15.6.0",
     "proxy-agent": "^2.0.0",
-    "react": "16.3.0",
+    "react": "16.7.0-alpha.0 - next",
     "react-d3-components": "^0.7.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "16.7.0-alpha.0 - next",
     "react-hot-loader": "^4.3.3",
     "react-image-lightbox": "^5.0.0",
     "react-redux": "^5.0.6",
-    "react-tap-event-plugin": "3.0.2",
     "recordrtc": "^5.4.5",
     "recursive-readdir": "^2.0.0",
     "redis": "^2.8.0",
@@ -89,10 +83,21 @@
     "yargs": "^10.0.3"
   },
   "devDependencies": {
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.1.5",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-istanbul": "^5.1.0",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.24.0",
+    "babelify": "^10.0.0",
     "electron-react-devtools": "^0.5.3",
-    "electron": "^2.0.5",
     "script-loader": "^0.7.2"
   }
 }
