--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
+    "webpack-dev-server": ">=3.1.14",
     "write-file-webpack-plugin": "^4.2.0",
     "yargs": "^10.0.3"
   },
